--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
@@ -608,7 +608,7 @@
   name: croissant
   parent: FoodBakedBase
   id: FoodBakedCroissant
-  description: Flakey, buttery goodness.
+  description: Buttery, flaky goodness.
   components:
   - type: FlavorProfile
     flavors:
