--- a/Resources/Prototypes/XenoArch/artifact_triggers.yml
+++ b/Resources/Prototypes/XenoArch/artifact_triggers.yml
@@ -123,6 +123,13 @@
   triggerHint: artifact-trigger-hint-bioreactive
   components:
   - type: reactive
+  groups:
+    Acidic: [ Touch ]
+  reactions:
+  - reagents: [ Dylovene, Diphenhydramine, Arithrazine, Bicaridine, Dermaline, Dexalin, DexalinPlus ] # adding all medical chems seems. Excessive, and also long. Ive just added the main ones for now
+    methods: [ Touch ]
+    effects:
+    - !type:ActivateArtifact
 
 - type: artifactTrigger
   id: TriggerAcidic
@@ -133,11 +140,11 @@
     groups:
       Acidic: [ Touch ]
     reactions:
-      - reagents: [ Vinegar, PolytrinicAcid, FerrochromicAcid, FluorosulfuricAcid, SulfuricAcid, Artifexium ]
+      - reagents: [ Vinegar, PolytrinicAcid, FerrochromicAcid, FluorosulfuricAcid, SulfuricAcid, Artifexium, NorepinephricAcid ]
         methods: [ Touch ]
         effects:
         - !type:ActivateArtifact
-        # artifexium should activate as its an acid. But. Its artifexium anyway lmao
+        # artifexium should activate as its an acid. But. Its artifexium anyway.
 
 - type: artifactTrigger
   id: TriggerBasic
