--- a/Resources/Prototypes/Entities/Structures/Lighting/base_lighting.yml
+++ b/Resources/Prototypes/Entities/Structures/Lighting/base_lighting.yml
@@ -210,6 +210,7 @@
   components:
   - type: PoweredLight
     hasLampOnSpawn: DiscoLightTube
+  - type: DamageOnInteract
     damage:
       types:
         Heat: 2
