--- a/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
@@ -696,6 +696,20 @@
       - RandomHumanoidTravelingChef
 
 - type: entity
+  name: settler spawner
+  id: SettlerSpawner
+  parent: MarkerBase
+  components:
+    - type: Sprite
+      layers:
+        - state: red
+        - sprite: Clothing/OuterClothing/Hardsuits/basic.rsi
+          state: icon
+    - type: RandomSpawner
+      prototypes:
+      - RandomHumanoidSettler
+
+- type: entity
   id: RandomHumanoidTravelingChef
   name: traveling chef ghost role
   components:
@@ -704,6 +718,27 @@
       state: icon
     - type: RandomHumanoidSpawner
       settings: TravelingChef
+
+- type: entity
+  id: RandomHumanoidSettler
+  name: settler ghost role
+  components:
+    - type: Sprite
+      sprite: Objects/Tools/appraisal-tool.rsi
+      state: icon
+    - type: RandomHumanoidSpawner
+      settings: Settler
+
+- type: randomHumanoidSettings
+  id: Settler
+  parent: EventHumanoid
+  components:
+    - type: GhostRole
+      name: ghost-role-information-settler-name
+      description: ghost-role-information-settler-description
+      rules: ghost-role-information-freeagent-rules
+    - type: Loadout
+      prototypes: [ Settler ]
 
 - type: randomHumanoidSettings
   id: TravelingChef
