--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -447,6 +447,38 @@
       - Security
 
 - type: entity
+  name: blaster
+  parent: BaseWeaponBatterySmall
+  id: WeaponBlaster
+  description: Standard-issue civilian-grade particle weapon.
+  components:
+    - type: Tag
+      tags:
+        - Sidearm
+    - type: Sprite
+      sprite: Objects/Weapons/Guns/Battery/svalinn.rsi
+      layers:
+        - state: base
+          map: ["enum.GunVisualLayers.Base"]
+        - state: mag-unshaded-4
+          map: ["enum.GunVisualLayers.MagUnshaded"]
+          shader: unshaded
+    - type: Item
+      sprite: Objects/Weapons/Guns/Battery/svalinn.rsi
+    - type: Clothing
+      quickEquip: false
+      slots:
+        - suitStorage
+        - Belt
+    - type: Gun
+      fireRate: 2
+      soundGunshot:
+        path: /Audio/Weapons/Guns/Gunshots/taser2.ogg
+    - type: ProjectileBatteryAmmoProvider
+      proto: WatcherBoltMagmawing
+      fireCost: 60
+
+- type: entity
   name: disabler SMG
   parent: BaseWeaponBattery
   id: WeaponDisablerSMG
