--- a/Resources/Prototypes/XenoArch/artifact_triggers.yml
+++ b/Resources/Prototypes/XenoArch/artifact_triggers.yml
@@ -122,14 +122,14 @@
   targetDepth: 2
   triggerHint: artifact-trigger-hint-bioreactive
   components:
-  - type: reactive
-  groups:
-    Acidic: [ Touch ]
-  reactions:
-  - reagents: [ Dylovene, Diphenhydramine, Arithrazine, Bicaridine, Dermaline, Dexalin, DexalinPlus ] # adding all medical chems seems. Excessive, and also long. Ive just added the main ones for now
-    methods: [ Touch ]
-    effects:
-    - !type:ActivateArtifact
+  - type: Reactive
+    groups:
+      Acidic: [ Touch ]
+    reactions:
+    - reagents: [ Dylovene, Diphenhydramine, Arithrazine, Bicaridine, Dermaline, Dexalin, DexalinPlus ] # adding all medical chems seems. Excessive, and also long. Ive just added the main ones for now
+      methods: [ Touch ]
+      effects:
+      - !type:ActivateArtifact
 
 - type: artifactTrigger
   id: TriggerAcidic
@@ -198,7 +198,7 @@
   targetDepth: 3
   triggerHint: artifact-trigger-hint-bioreactive
   components:
-  - type: reactive
+  - type: Reactive
     groups:
       Acidic: [ Touch ]
     reactions:
@@ -212,7 +212,7 @@
   targetDepth: 3 # D3s are due to illegality/restrictions of some reactants
   triggerHint: artifact-trigger-hint-bioreactive
   components:
-  - type: reactive
+  - type: Reactive
     groups:
       Acidic: [ Touch ]
     reactions:
@@ -226,7 +226,7 @@
   targetDepth: 3
   triggerHint: artifact-trigger-hint-energetic
   components:
-  - type: reactive
+  - type: Reactive
     groups:
       Acidic: [ Touch ]
     reactions:
