Detective + Noir Coats tweaks + Badge

--- a/Resources/Prototypes/GreyStation/Entities/Clothing/Neck/misc.yml
+++ b/Resources/Prototypes/GreyStation/Entities/Clothing/Neck/misc.yml
@@ -34,3 +34,15 @@
     - Spray
     - ClothMade
     - WhitelistChameleon
+
+
+- type: entity
+  parent: ClothingNeckBase
+  id: ClothingNeckDetectiveBadge
+  name: detective badge
+  description: A badge for the station's detectives and investigators.
+  components:
+  - type: Sprite
+    sprite: GreyStation/Clothing/Neck/Misc/detectivebadge.rsi
+  - type: Clothing
+    sprite: GreyStation/Clothing/Neck/Misc/detectivebadge.rsi
