--- a/Resources/Prototypes/Loadouts/Jobs/Security/detective.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Security/detective.yml
@@ -46,3 +46,8 @@
   id: DetectiveCoat
   equipment:
     outerClothing: ClothingOuterCoatDetectiveLoadout
+
+- type: loadout # GreyStation Added
+  id: DetectiveGreyCoat
+  equipment:
+    outerClothing: ClothingOuterCoatDetectiveLoadoutGrey
