--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -1025,6 +1025,7 @@
   loadouts:
   - DetectiveArmorVest
   - DetectiveCoat
+  - DetectiveGreyCoat # GreyStation Added
 
 - type: loadoutGroup
   id: SecurityCadetJumpsuit
