--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/coats.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/coats.yml
@@ -10,15 +10,15 @@
     sprite: Clothing/OuterClothing/Coats/bomber.rsi
 
 - type: entity
-  parent: [ClothingOuterStorageBase, AllowSuitStorageClothing, ClothingOuterArmorBasic]
+  parent: [ClothingOuterStorageFoldableBase, AllowSuitStorageClothing, ClothingOuterArmorBasic]
   id: ClothingOuterCoatDetective
   name: detective trenchcoat
   description: An 18th-century multi-purpose trenchcoat. Someone who wears this means serious business.
   components:
   - type: Sprite
-    sprite: Clothing/OuterClothing/Coats/detective.rsi
+    sprite: GreyStation/Clothing/OuterClothing/Coats/detective.rsi # GreyStation Resprite
   - type: Clothing
-    sprite: Clothing/OuterClothing/Coats/detective.rsi
+    sprite: GreyStation/Clothing/OuterClothing/Coats/detective.rsi # GreyStation Resprite
   - type: StorageFill
     contents:
     - id: SmokingPipeFilledTobacco
@@ -33,9 +33,9 @@
   description: Ah, your trusty coat. There's a few tears here and there, giving it a more timely look. Or at least, that's what you told yourself when you found out gettin' it repaired would set you back 200 speos.
   components:
   - type: Sprite
-    sprite: Clothing/OuterClothing/Coats/detective_grey.rsi
+    sprite: GreyStation/Clothing/OuterClothing/Coats/detective_grey.rsi # GreyStation Resprite
   - type: Clothing
-    sprite: Clothing/OuterClothing/Coats/detective_grey.rsi
+    sprite: GreyStation/Clothing/OuterClothing/Coats/detective_grey.rsi # GreyStation Resprite
 
 
 - type: entity
