taco naming gen

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/taco.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/taco.yml
@@ -28,6 +28,6 @@
     maxLayers: 3
     startPosition: 0, 0
     offset: 0, 0
-    nameGeneration: food-sequence-standart-gen
-    nameSuffix: food-sequence-burger-suffix
+    nameGeneration: food-sequence-taco-gen
+    contentSeparator: ", "
   - type: Appearance
